Testing changing position and adding padding to text to fix error on Ios where checkmark moves around.

--- a/code/src/components/task.css
+++ b/code/src/components/task.css
@@ -12,6 +12,10 @@
   content:"\200B"; 
 }
 
+.task-text {
+  padding-left: 3rem;
+}
+
 /* Task status */
 
 .task-completed label{
@@ -45,13 +49,12 @@
 .checkbox-label::before {
   border: 2px solid #daa520;
   border-radius: 50%;
-  content: "";
-  display: inline-block;
+  content: '';
+  display: block;
   flex-shrink: 0;
-  height: 1.75rem;
-  margin-right: 0.8rem;
-  position: relative;
-  width: 1.75rem;
+  height: 28px;
+  position: absolute;
+  width: 28px
 }
 
 .checkbox:checked + .checkbox-label::before {
@@ -60,16 +63,13 @@
 
 .checkbox:checked + .checkbox-label::after {
   background: center / 50% no-repeat url("../icons/icons8-checkmark.svg");
-  color: #daa520;
   content:'';
-  display: inline-block;
+  display: block;
   flex-shrink: 0;
-  height: 1.75rem;
+  height: 28px;
   left: 2px;
-  line-height: 1.6;
   position: absolute;
-  text-align: center;
-  width: 1.75rem;
+  width: 28px;
 }
 
 .checkbox:focus + .checkbox-label::before {
@@ -88,9 +88,9 @@
 
 .delete-symbol {
   filter: grayscale(100%);
-  height: 1.5rem;
+  height: 24px;
   opacity: 0.3;
-  width: 1.5rem;
+  width: 24px;
 }
 
 .delete-symbol:hover {
